--- a/tuya/android/project/trunk/app/src/main/res/layout/activity_album.xml
+++ b/tuya/android/project/trunk/app/src/main/res/layout/activity_album.xml
@@ -5,13 +5,13 @@
     android:layout_height="fill_parent"
     android:background="#ffffff" >
 
-    <com.cyou.sticker.business.camera.customview.CommonTitleBar
+    <com.cyou.sticker.camera.customview.CommonTitleBar
         android:id="@+id/title_layout"
         style="@style/head_default"
         app:leftBtnIcon="@drawable/icon_back_arrow_selector"
         app:titleTxt="我的图库" />
 
-    <com.cyou.sticker.business.camera.customview.PagerSlidingTabStrip
+    <com.cyou.sticker.camera.customview.PagerSlidingTabStrip
         android:id="@+id/indicator"
         android:layout_width="fill_parent"
         android:layout_height="48dp"
