--- a/tuya/android/project/trunk/app/src/main/res/layout/activity_edit_text.xml
+++ b/tuya/android/project/trunk/app/src/main/res/layout/activity_edit_text.xml
@@ -6,7 +6,7 @@
     android:background="@color/white"
     android:orientation="vertical" >
 
-    <com.cyou.sticker.business.camera.customview.CommonTitleBar
+    <com.cyou.sticker.camera.customview.CommonTitleBar
         android:id="@+id/title_layout"
         style="@style/head_default"
         app:leftBtnTxt="取消"
