--- a/tuya/android/project/trunk/app/src/main/res/layout/activity_image_process.xml
+++ b/tuya/android/project/trunk/app/src/main/res/layout/activity_image_process.xml
@@ -6,7 +6,7 @@
     android:background="#ffffff"
     android:orientation="vertical" >
 
-    <com.cyou.sticker.business.camera.customview.CommonTitleBar
+    <com.cyou.sticker.camera.customview.CommonTitleBar
         android:id="@+id/title_layout"
         style="@style/head_default"
         app:leftBtnIcon="@drawable/icon_back_arrow_selector"
