--- a/tuya/android/project/trunk/app/src/main/res/layout/activity_album.xml
+++ b/tuya/android/project/trunk/app/src/main/res/layout/activity_album.xml
@@ -9,7 +9,7 @@
         android:id="@+id/title_layout"
         style="@style/head_default"
         app:leftBtnIcon="@drawable/icon_back_arrow_selector"
-        app:titleTxt="我的图库" />
+        app:titleTxt="xxxx" />
 
     <com.potato.sticker.camera.customview.PagerSlidingTabStrip
         android:id="@+id/indicator"
