--- a/app/src/main/res/layout/activity_image_process.xml
+++ b/app/src/main/res/layout/activity_image_process.xml
@@ -11,9 +11,9 @@
         style="@style/head_default"
         app:leftBtnIcon="@drawable/icon_back_arrow_selector"
         app:rightBtnIcon="@drawable/next"
-        app:titleTxt="编辑相片"
-        app:leftBtnTxt="返回"
-        app:rightBtnTxt="下一步" />
+        app:titleTxt="@string/str_edit_photo"
+        app:leftBtnTxt="@string/str_back"
+        app:rightBtnTxt="@string/str_next" />
 
     <LinearLayout
         android:id="@+id/main_area"
@@ -66,7 +66,7 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="贴纸"
+            android:text="@string/str_sticker"
             android:textColor="#d0beb9"
             android:textSize="22sp" />
 
@@ -76,7 +76,7 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="滤镜"
+            android:text="@string/str_lvjing"
             android:textColor="#d0beb9"
             android:textSize="22sp" />
 
@@ -86,7 +86,7 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="标签"
+            android:text="@string/str_tag"
             android:textColor="#d0beb9"
             android:textSize="22sp" />
     </LinearLayout>
