--- a/app/src/main/res/layout/item_bottom_filter.xml
+++ b/app/src/main/res/layout/item_bottom_filter.xml
@@ -28,7 +28,7 @@
         android:layout_below="@id/small_filter_container"
         android:layout_marginTop="10dp"
         android:gravity="center"
-        android:text="无滤镜"
+        android:text="@string/str_wlj"
         android:textColor="#9b6b6c"
         android:textSize="20sp" />
 
