--- a/app/src/main/res/layout/item_topic.xml
+++ b/app/src/main/res/layout/item_topic.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="bean"
-            type="com.potato.sticker.camera.data.bean.FeedItem" />
+            type="com.potato.sticker.main.data.bean.TopicBean" />
 
     </data>
 
