--- a/app/src/main/res/layout/activity_topic_detail.xml
+++ b/app/src/main/res/layout/activity_topic_detail.xml
@@ -60,7 +60,7 @@
                     android:id="@+id/list"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@android:color/transparent"
+                    android:background="@android:color/white"
                     android:cacheColorHint="@android:color/transparent"
                     android:divider="@android:color/transparent"
                     android:dividerHeight="0px"
