--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -14,7 +14,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:gravity="center_vertical"
         android:orientation="horizontal"
@@ -22,8 +22,8 @@
 
         <ImageView
             android:id="@+id/iv_avatar"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="38dp"
+            android:layout_height="38dp"
             android:scaleType="fitXY"
             android:src="@drawable/def_gray_small" />
 
@@ -45,7 +45,8 @@
                     android:layout_weight="2"
                     android:text="name"
                     android:textColor="@color/potato_black"
-                    android:textSize="@dimen/txt_max" />
+                    android:textSize="@dimen/txt_min"
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/tv_time"
@@ -63,7 +64,7 @@
                 android:layout_height="wrap_content"
                 android:padding="2dp"
                 android:text="text"
-                android:textSize="@dimen/txt_normal" />
+                android:textSize="@dimen/txt_min" />
 
         </LinearLayout>
 
