--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <!--   darker variant for the status bar and contextual app bars -->
         <item name="colorPrimaryDark">@color/material_blue_grey_800</item>
         <!--   theme UI controls like checkboxes and text fields -->
-        <item name="colorAccent">#FF4081</item>
+        <item name="colorAccent">#1D6EC4</item>
         <item name="android:windowBackground">@color/app_bg</item>
         <item name="android:windowContentOverlay">@color/app_bg</item>
 
