--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -41,7 +41,6 @@
             android:layout_height="match_parent"
             android:layout_below="@id/rl_header"
             android:orientation="vertical">
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -51,22 +50,23 @@
                 <LinearLayout
                     android:id="@+id/rl_title"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="80dp"
                     android:layout_gravity="center_vertical"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:padding="5dp">
+                    android:padding="10dp">
 
                     <ImageView
                         android:id="@+id/iv_avatar"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
                         android:scaleType="fitXY"
                         android:src="@drawable/def_gray_small" />
 
                     <RelativeLayout
                         android:layout_width="fill_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2">
 
                         <TextView
                             android:id="@+id/tv_name"
@@ -93,18 +93,27 @@
 
                     </RelativeLayout>
 
+                    <Button
+                        android:id="@+id/bt_focus"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:background="@drawable/selector_bg_red"
+                        android:text="@string/str_focus"
+                        android:textColor="@color/potato_white" />
+
                 </LinearLayout>
 
                 <View
                     android:layout_width="fill_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="1px"
                     android:background="@color/divider"></View>
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="60dp"
                     android:gravity="center"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:padding="10dp">
 
                     <LinearLayout
                         android:id="@+id/ll_tag"
@@ -120,19 +129,20 @@
                             android:layout_height="wrap_content"
                             android:text="0"
                             android:textColor="@color/potato_black"
-                            android:textSize="@dimen/txt_normal" />
+                            android:textSize="@dimen/txt_normal"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/str_tag"
                             android:textColor="@color/potato_gray3"
-                            android:textSize="@dimen/txt_normal" />
+                            android:textSize="@dimen/txt_small" />
 
                     </LinearLayout>
 
                     <View
-                        android:layout_width="1dp"
+                        android:layout_width="1px"
                         android:layout_height="30dp"
                         android:background="@color/divider"></View>
 
@@ -150,18 +160,19 @@
                             android:layout_height="wrap_content"
                             android:text="0"
                             android:textColor="@color/potato_black"
-                            android:textSize="@dimen/txt_normal" />
+                            android:textSize="@dimen/txt_normal"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/str_zan"
                             android:textColor="@color/potato_gray3"
-                            android:textSize="@dimen/txt_normal" />
+                            android:textSize="@dimen/txt_small" />
                     </LinearLayout>
 
                     <View
-                        android:layout_width="1dp"
+                        android:layout_width="1px"
                         android:layout_height="30dp"
                         android:background="@color/divider"></View>
 
@@ -179,18 +190,19 @@
                             android:layout_height="wrap_content"
                             android:text="0"
                             android:textColor="@color/potato_black"
-                            android:textSize="@dimen/txt_normal" />
+                            android:textSize="@dimen/txt_normal"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/str_focus"
                             android:textColor="@color/potato_gray3"
-                            android:textSize="@dimen/txt_normal" />
+                            android:textSize="@dimen/txt_small" />
                     </LinearLayout>
 
                     <View
-                        android:layout_width="1dp"
+                        android:layout_width="1px"
                         android:layout_height="30dp"
                         android:background="@color/divider"></View>
 
@@ -208,21 +220,22 @@
                             android:layout_height="wrap_content"
                             android:text="0"
                             android:textColor="@color/potato_black"
-                            android:textSize="@dimen/txt_normal" />
+                            android:textSize="@dimen/txt_normal"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/str_fans"
                             android:textColor="@color/potato_gray3"
-                            android:textSize="@dimen/txt_normal" />
+                            android:textSize="@dimen/txt_small" />
                     </LinearLayout>
 
                 </LinearLayout>
 
                 <View
                     android:layout_width="fill_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="1px"
                     android:background="@color/divider" />
 
                 <LinearLayout
