--- a/app/src/main/res/layout/activity_topic_detail.xml
+++ b/app/src/main/res/layout/activity_topic_detail.xml
@@ -62,8 +62,8 @@
                     android:layout_height="match_parent"
                     android:background="@android:color/white"
                     android:cacheColorHint="@android:color/transparent"
-                    android:divider="@android:color/transparent"
-                    android:dividerHeight="0px"
+                    android:divider="@color/divider"
+                    android:dividerHeight="1px"
                     android:listSelector="@android:color/transparent"
                     android:scrollbars="none" />
 
