--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -19,6 +19,7 @@
             android:layout_height="50dip"
             android:background="@color/sticker_blue"
             android:gravity="center_vertical">
+
             <TextView
                 android:id="@+id/tv_title"
                 android:layout_width="wrap_content"
@@ -50,23 +51,23 @@
                 <LinearLayout
                     android:id="@+id/rl_title"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="80dp"
                     android:layout_gravity="center_vertical"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:padding="5dp">
+                    android:padding="10dp">
 
                     <ImageView
                         android:id="@+id/iv_avatar"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
                         android:scaleType="fitXY"
                         android:src="@drawable/def_gray_small" />
 
                     <RelativeLayout
-                        android:layout_weight="2"
                         android:layout_width="fill_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2">
 
                         <TextView
                             android:id="@+id/tv_name"
@@ -99,20 +100,21 @@
                         android:layout_height="40dp"
                         android:background="@drawable/selector_bg_red"
                         android:text="@string/str_focus"
-                        android:textColor="@color/potato_white"/>
+                        android:textColor="@color/potato_white" />
 
                 </LinearLayout>
 
                 <View
                     android:layout_width="fill_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="1px"
                     android:background="@color/divider"></View>
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="60dp"
                     android:gravity="center"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:padding="10dp">
 
                     <LinearLayout
                         android:id="@+id/ll_tag"
@@ -128,19 +130,20 @@
                             android:layout_height="wrap_content"
                             android:text="0"
                             android:textColor="@color/potato_black"
-                            android:textSize="@dimen/txt_normal" />
+                            android:textSize="@dimen/txt_normal"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/str_tag"
                             android:textColor="@color/potato_gray3"
-                            android:textSize="@dimen/txt_normal" />
+                            android:textSize="@dimen/txt_small" />
 
                     </LinearLayout>
 
                     <View
-                        android:layout_width="1dp"
+                        android:layout_width="1px"
                         android:layout_height="30dp"
                         android:background="@color/divider"></View>
 
@@ -158,18 +161,19 @@
                             android:layout_height="wrap_content"
                             android:text="0"
                             android:textColor="@color/potato_black"
-                            android:textSize="@dimen/txt_normal" />
+                            android:textSize="@dimen/txt_normal"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/str_zan"
                             android:textColor="@color/potato_gray3"
-                            android:textSize="@dimen/txt_normal" />
+                            android:textSize="@dimen/txt_small" />
                     </LinearLayout>
 
                     <View
-                        android:layout_width="1dp"
+                        android:layout_width="1px"
                         android:layout_height="30dp"
                         android:background="@color/divider"></View>
 
@@ -187,18 +191,19 @@
                             android:layout_height="wrap_content"
                             android:text="0"
                             android:textColor="@color/potato_black"
-                            android:textSize="@dimen/txt_normal" />
+                            android:textSize="@dimen/txt_normal"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/str_focus"
                             android:textColor="@color/potato_gray3"
-                            android:textSize="@dimen/txt_normal" />
+                            android:textSize="@dimen/txt_small" />
                     </LinearLayout>
 
                     <View
-                        android:layout_width="1dp"
+                        android:layout_width="1px"
                         android:layout_height="30dp"
                         android:background="@color/divider"></View>
 
@@ -216,21 +221,22 @@
                             android:layout_height="wrap_content"
                             android:text="0"
                             android:textColor="@color/potato_black"
-                            android:textSize="@dimen/txt_normal" />
+                            android:textSize="@dimen/txt_normal"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/str_fans"
                             android:textColor="@color/potato_gray3"
-                            android:textSize="@dimen/txt_normal" />
+                            android:textSize="@dimen/txt_small" />
                     </LinearLayout>
 
                 </LinearLayout>
 
                 <View
                     android:layout_width="fill_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="1px"
                     android:background="@color/divider" />
 
                 <LinearLayout
