--- a/app/src/main/res/layout/item_camara_ablum.xml
+++ b/app/src/main/res/layout/item_camara_ablum.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="3dp"
+        android:padding="1px"
         >
         <com.potato.library.view.KeepRatioImageView
             android:id="@+id/iv_pic"
