--- a/app/src/main/res/layout/item_topic.xml
+++ b/app/src/main/res/layout/item_topic.xml
@@ -33,10 +33,10 @@
             <LinearLayout
                 android:id="@+id/rl_title"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_height="70dp"
                 android:layout_gravity="center_vertical"
                 android:gravity="center_vertical"
-                android:padding="5dp"
+                android:padding="10dp"
                 android:orientation="horizontal"
                 >
 
@@ -59,7 +59,7 @@
                         android:layout_alignParentTop="true"
                         android:textColor="@color/potato_black"
                         android:text="name"
-                        android:textSize="@dimen/txt_max"
+                        android:textSize="@dimen/txt_normal"
                         android:paddingLeft="10dp"
                         />
 
@@ -111,13 +111,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:gravity="center"
                 android:padding="10dp">
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_weight="1"
-                    android:gravity="center_horizontal">
+                    android:gravity="center"
+                    >
                     <ImageView
                         android:id="@+id/iv_heart"
                         android:layout_width="wrap_content"
@@ -128,7 +130,8 @@
                         android:text="100"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingLeft="5dp"/>
+                        android:paddingLeft="5dp"
+                        />
                 </LinearLayout>
                 <LinearLayout
                     android:id="@+id/ll_comment_bt"
@@ -136,7 +139,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_weight="1"
-                    android:gravity="center_horizontal">
+                    android:gravity="center">
                     <ImageView
                         android:id="@+id/iv_comment"
                         android:layout_width="wrap_content"
