--- a/app/src/main/res/layout/activity_msg.xml
+++ b/app/src/main/res/layout/activity_msg.xml
@@ -68,10 +68,10 @@
                         android:id="@+id/list"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@android:color/transparent"
+                        android:background="@android:color/white"
                         android:cacheColorHint="@android:color/transparent"
-                        android:divider="@android:color/transparent"
-                        android:dividerHeight="0px"
+                        android:divider="@color/divider"
+                        android:dividerHeight="1px"
                         android:listSelector="@android:color/transparent"
                         android:scrollbars="none" />
 
