--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -14,6 +14,7 @@ xmlns:tools="http://schemas.android.com/tools">
     android:layout_height="match_parent">
 
     <RelativeLayout
+        android:visibility="gone"
         android:id="@+id/rl_header"
         android:layout_width="fill_parent"
         android:layout_height="50dip"
