--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -94,6 +94,7 @@
                     </RelativeLayout>
 
                     <Button
+                        android:visibility="gone"
                         android:id="@+id/bt_focus"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
